--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,8 +1,8 @@
 .header{
     width: 100%;
-  
-    .header-top{
-        // width: 100%;   
+    margin: 0 auto;
+    
+        .header-top{
         height: 132px;  
         display: flex;
         background-color: black;   
@@ -13,11 +13,6 @@
 
     }
 
-    .header-bottom{
-        width: 100%;
-        height: 268px;
-        background-image: url('../assets/img/background-header.png');
-    }
     .left-item{
         display: flex;
         align-items: center;
