--- a/src/styles/Gallery-app.scss
+++ b/src/styles/Gallery-app.scss
@@ -5,11 +5,20 @@
     height: 267px;
 }
 .gallery-images{
-    background-color: aquamarine;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
+
+    .images{
+        margin: 10px;
+        width: 400px;
+        height: 400px;
+        img{
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
 
